fix: scrollbars

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+body {
+	padding: 0;
+	overflow: hidden;
+}
+
 .flipbook-canvas {
 	position: absolute;
 	top: 0;
